<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/influxdb_configuration">

        <ListPreference
            app:defaultValue="influx1"
            app:entries="@array/sink_type_names"
            app:entryValues="@array/sink_type_values"
            app:key="influx_version"
            app:title="Version"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="influx_host"
            app:summary="@string/influx_host_summary"
            app:title="@string/influx_host_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="influx_port"
            app:summary="@string/influx_port_summary"
            app:title="@string/influx_port_title"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="influx_tls"
            app:summary="@string/influx_tls_summary"
            app:title="@string/influx_tls_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="influx_db"
            app:summary="@string/influx_db_summary"
            app:title="@string/influx_db_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:defaultValue="fluxdroid_event"
            app:key="influx_measurement"
            app:summary="@string/influx_measurement_summary"
            app:title="@string/influx_measurement_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="influx_username"
            app:summary="@string/influx_username_summary"
            app:title="@string/influx_username_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="influx_password"
            app:summary="@string/influx_password_summary"
            app:title="@string/influx_password_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="influx_token"
            app:summary="@string/influx_token_summary"
            app:title="@string/influx_token_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>
