<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="0dp"
        app:cardElevation="0dp"
        app:contentPaddingBottom="32dp"
        app:contentPaddingTop="32dp"
        app:strokeColor="@color/material_on_surface_stroke"
        app:strokeWidth="1dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="32dp"
            android:paddingEnd="32dp">

            <ImageView
                android:id="@+id/chartIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/desc_stonks"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_show_chart_32" />

            <LinearLayout
                android:id="@+id/totalText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="32dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/chartIcon"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="12389"
                    android:textAppearance="?attr/textAppearanceHeadline6" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/events_sent"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="0dp"
        app:cardElevation="0dp"
        app:strokeColor="@color/material_on_surface_stroke"
        app:strokeWidth="1dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="32dp"
            android:paddingEnd="32dp">

            <ImageView
                android:id="@+id/eventCountIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/desc_numbered_list"
                app:layout_constraintBottom_toBottomOf="@+id/eventCountContent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/eventCountContent"
                app:srcCompat="@drawable/ic_baseline_format_list_numbered_32" />

            <LinearLayout
                android:id="@+id/eventCountContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="42dp"
                android:orientation="vertical"
                app:layout_constraintStart_toEndOf="@+id/eventCountIcon"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subscribed_to"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary" />

                <TextView
                    android:id="@+id/eventCountText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceHeadline6" />

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnConfigureEvents"
                style="?attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"
                android:text="@string/configure"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/eventCountContent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="0dp"
        app:cardElevation="0dp"
        app:strokeColor="@color/material_on_surface_stroke"
        app:strokeWidth="1dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="32dp"
            android:paddingEnd="32dp">

            <ImageView
                android:id="@+id/sinkIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/desc_cloud"
                app:layout_constraintBottom_toBottomOf="@+id/sinkText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/sinkText"
                app:srcCompat="@drawable/ic_baseline_cloud_queue_32" />

            <LinearLayout
                android:id="@+id/sinkText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="32dp"
                android:layout_marginTop="42dp"
                android:orientation="vertical"
                app:layout_constraintStart_toEndOf="@+id/sinkIcon"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:id="@+id/sinkTextConfigured"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sending_events_to"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="?android:attr/textColorSecondary" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/influxdb"
                        android:textAppearance="?attr/textAppearanceHeadline6" />
                </LinearLayout>

                <TextView
                    android:id="@+id/sinkTextNotConfigured"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_destination_configured"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary" />

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnConfigureSink"
                style="?attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"
                android:text="@string/configure"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sinkText" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</LinearLayout>